--- a/schedule.html
+++ b/schedule.html
@@ -27,8 +27,8 @@ image: hero.jpg
                         <ul>
                             <li><b>Homebrew - </b><a href="/games/abused-powers">Abused Powers</a></li>
                             <li><b>Alien - </b> <a href="/games/it-waits-in-the-dark">It waits in the dark</a></li>
-                            <li><b>Sentiment - </b> <a href="/games/reflection-zero-to-hero">He's the Sheriff and We're Frozen in Here</a></li>
-                            <li><b>Shires out - </b> <a href="/games/hair-of-the-hare-of-the-heir">Hair of the hare of the heir</a></li>
+                            <li><b>Sentiment - </b> <a href="/games/reflection-zero-to-hero">Reflection: Zero to Hero</a></li>
+                            <li><b>Shires out - </b> <a href="/games/hair-hare-heir">Hair of the hare of the heir</a></li>
                         </ul>
                     </td>
                 </tr>
@@ -64,13 +64,13 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>GUMSHOE - </b><a href="/games/case-of-the-great-ring">The Case of the Great Ring: A shires Out! Adventure</a>
+                                <b>Heart: The City Beneath - </b><a href="/games/airlock-7">Airlock 7</a>
                             </li>
                             <li>
-                                <b>D&D 5E - </b><a href="/games/treasure-of-dag-dreadmaw">The treasure of Dag Dreadmaw</a>
+                                <b>Cyberpunk 2020 - </b><a href="/games/are-friends-electric">Are Friends Electric</a>
                             </li>
                             <li>
-                                <b>FIST - </b><a href="/games/systematic-mirage">FIST: The Systematic Mirage</a>
+                                <b>Mausritter by Losing Games. A d20 roll under system - </b><a href="/games/cinderella-dress">Cinderella Needs a Dress. The Mice Will Do the Rest.</a>
                             </li>
                         </ul>
                     </td>
@@ -82,13 +82,13 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>D&D 5E - </b><a href="/games/come-away-oh-human-child">Come Away Oh Human Child</a>
+                                <b>Alien - </b><a href="/games/bug-hunt">Bug Hunt</a>
                             </li>
                             <li>
-                                <b>Alien - </b><a href="/games/it-waits-in-the-dark">It Waits in the Dark</a>
+                                <b>Homebrew - </b><a href="/games/how-to-not-fix-a-problem">How to (Not) Fix a Problem</a>
                             </li>
                             <li>
-                                <b>Innocents - </b><a href="/games/lights-out">Lights Out!</a>
+                                <b>Delta Green/d100 - </b><a href="/games/how-not-fix-problem">Infinite Staircase National Park</a>
                             </li>
                         </ul>
                     </td>
@@ -100,7 +100,7 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Call of Cthulu 5E - </b><a href="/games/frunglecon-2021">Frunglecon 2021</a>
+                                <b>Trail of Cthulhu - </b><a href="/games/out-of-the-col">Out of the Cold</a>
                             </li>
                         </ul>
                     </td>
@@ -118,13 +118,10 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Pathfinder 2E - </b><a href="/games/hes-the-sheriff-and-were-frozen-here">He's the Sheriff and We're Frozen in Here</a>
+                                <b>Cyberpunk 2020 - </b><a href="/games/are-friends-electric">Are Friends Electric</a>
                             </li>
                             <li>
-                                <b>Legend of the Five Rings (FFG Edition) - </b><a href="/games/snow-falls-at-kyuden-shinjin">Snow Falls at Kyuden Shinjin</a>
-                            </li>
-                            <li>
-                                <b>Savage Worlds - </b><a href="/games/rat-in-a-cage">Tales of Toholon - Rat in a Cage</a>
+                                <b>Heart the City Beneath - </b><a href="/games/this-sick-island">The Sick Island</a>
                             </li>
                         </ul>
                     </td>
@@ -136,10 +133,10 @@ image: hero.jpg
                     <td>
                         <ul>
                             <li>
-                                <b>Trail of Cthulu 2E - </b><a href="/games/afterlight">Afterlight</a>
+                                <li><b>Homebrew - </b><a href="/games/abused-powers">Abused Powers</a></li>
                             </li>
                             <li>
-                                <b>D&D 5E - </b><a href="/games/come-away-oh-human-child">Away Oh Human Child</a>
+                                <li><b>Sentiment - </b> <a href="/games/reflection-zero-to-hero">Reflection: Zero to Hero</a></li>
                             </li>
                         </ul>
                     </td>
@@ -473,7 +470,7 @@ image: hero.jpg
                         10:00
                     </td>
                     <td>
-                        <a href="/games/its-for-your-own-good">It's for Your Own Good</a>
+                        <a href="/games/7-rivers">7 Rivers: Children of the Khan</a>
                     </td>
                 </tr>
                 <tr>
@@ -481,7 +478,15 @@ image: hero.jpg
                         14:00
                     </td>
                     <td>
-                        <a href="/games/the-summit-of-chimes">The Summit of Chimes</a>
+                        <a href="/games/danganropa-kill">DanganRonpa: 3 Hours to Kill</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        14:00
+                    </td>
+                    <td>
+                        <a href="/games/danganropa-live">DanganRonpa: 3 Hours to Live</a>
                     </td>
                 </tr>
                 <tr>
@@ -489,7 +494,8 @@ image: hero.jpg
                         18:00
                     </td>
                     <td>
-                        <a href="/games/instrument-of-surrender">Instrument of Surrender</a>
+                        <a href="/games/stewardship-arrakis">Dune Landsraad: Stewardship of Arrakis
+                        </a>
                     </td>
                 </tr>
             </tbody>
@@ -503,7 +509,7 @@ image: hero.jpg
                         14:00
                     </td>
                     <td>
-                        <a href="/games/the-red-sands-of-stenthos">7 Rivers: The Red Sands of Stenthos</a>
+                        <a href="/games/tales-toholon">Tales of Toholon: Standards and Practices</a>
                     </td>
                 </tr>
             </tbody>
