--- a/schedule.html
+++ b/schedule.html
@@ -145,7 +145,7 @@ image: hero.jpg
         </table>
     </section>
 
-    <!-- <section class="schedule" id="ccgs">
+    <section class="schedule" id="ccgs">
         <h1>Card Games Tournaments</h1>
 
         <h2>Friday, 27th January</h2>
@@ -457,7 +457,7 @@ image: hero.jpg
                 </tr>
             </tbody>
         </table>
-    </section> -->
+    </section>
 
     <section class="schedule" id="larps">
         <h1>LARPS</h1>
