--- a/schedule.html
+++ b/schedule.html
@@ -148,7 +148,7 @@ image: hero.jpg
     <section class="schedule" id="ccgs">
         <h1>Card Games Tournaments</h1>
 
-        <h2>Friday, 27th January</h2>
+        <h2>Friday, 31st January</h2>
         <table>
             <thead>
                 <tr>
@@ -171,11 +171,28 @@ image: hero.jpg
             </thead>
             <tbody>
                 <tr>
+                    <td>
+                        17:00
+                    </td>
+                    <td>
+                        17:00
+                    </td>
+                    <td>
+                        Commander
+                    </td>
+                    <td>
+                        Constructed Tournament
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
                     <td rowspan="2">
-                        18:30
+                        19:00
                     </td>
                     <td rowspan="2">
-                        17:00 - 18:15
+                        17:00
                     </td>
                     <td>
                         Magic: The Gathering
@@ -189,13 +206,13 @@ image: hero.jpg
                 </tr>
                 <tr>
                     <td>
-                        Commander
+                        Yu-Gi-Oh
                     </td>
                     <td>
-                        Constructed Tournament
+                        Locals
                     </td>
                     <td>
-                        €10
+                        €5
                     </td>
                 </tr>
             </tbody>
@@ -222,44 +239,13 @@ image: hero.jpg
                     </td>
                 </tr>
             </thead>
-            <tbody>
+            <tbody>    
                 <tr>
-                    <td rowspan="2">
+                    <td>
                         11:00
                     </td>
                     <td>
-                        10:00 - 10:45
-                    </td>
-                    <td>
-                        Magic: The Gathering
-                    </td>
-                    <td>
-                        Dominaria Remastered Draft
-                    </td>
-                    <td>
-                        €30
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        10:00 - 10:45
-                    </td>
-                    <td>
-                        Digimon TCG
-                    </td>
-                    <td>
-                        Constructed Tournament
-                    </td>
-                    <td>
-                        €10
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        11:30
-                    </td>
-                    <td>
-                        10:00 - 11:15
+                        10:00
                     </td>
                     <td>
                         Commander
@@ -276,61 +262,63 @@ image: hero.jpg
                         12:00
                     </td>
                     <td>
-                        10:00 - 11:45
+                        10:00
                     </td>
                     <td>
-                        Pokemon TCG
+                        Pokemon
                     </td>
                     <td>
-                        Constructed Tournament
+
                     </td>
                     <td>
                         €10
                     </td>
                 </tr>
                 <tr>
-                    <td rowspan="2">
+                    <td>
                         14:30
                     </td>
-                    <td rowspan="2">
-                        10:00 - 14:15
-                    </td>
                     <td>
-                        Pauper
+                        10:00
                     </td>
-                    <td>
-                        Constructed Tournament
-                    </td>
-                    <td>
-                        €10
-                    </td>
-                </tr>
-                <tr>
                     <td>
                         Yu-Gi-Oh
                     </td>
                     <td>
-                        Constructed Tournament
+                        Win a box
                     </td>
                     <td>
                         €10
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td rowspan="2">
                         15:00
                     </td>
-                    <td>
-                        10:00 - 14:45
+                    <td rowspan="2">
+                        10:00
                     </td>
-                    <td colspan="2">
-                        Commander Legends: Battle for Baldur's Draft
+                    <td>
+                        Ravnica
+                    </td>
+                    <td>
+                        Remastered Draft
                     </td>
                     <td>
                         €30
                     </td>
                 </tr>
-
+                <tr>
+                    <td>
+                        Lorcana 
+                    </td>
+                    <td>
+                        
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
             </tbody>
         </table>
 
@@ -357,42 +345,11 @@ image: hero.jpg
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="2">
+                    <td>
                         11:00
                     </td>
                     <td>
-                        10:00 - 10:45
-                    </td>
-                    <td>
-                        Magic: The Gathering
-                    </td>
-                    <td>
-                        Commander Legends Draft
-                    </td>
-                    <td>
-                        €30
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        10:00 - 10:45
-                    </td>
-                    <td>
-                        Digimon TCG
-                    </td>
-                    <td>
-                        Constructed Tournament
-                    </td>
-                    <td>
-                        €10
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        11:30
-                    </td>
-                    <td>
-                        10:00 - 11:15
+                        11:00
                     </td>
                     <td>
                         Commander
@@ -405,54 +362,70 @@ image: hero.jpg
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td rowspan="3">
                         12:00
                     </td>
-                    <td>
-                        10:00 - 11:45
-                    </td>
-                    <td>
-                        Pokemon TCG
-                    </td>
-                    <td>
-                        Constructed Tournament
-                    </td>
-                    <td>
-                        €10
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        13:30
-                    </td>
-                    <td>
-                        10:00 - 13:15
-                    </td>
-                    <td>
-                        Pioneer
-                    </td>
-                    <td>
-                        Constructed Tournament
-                    </td>
-                    <td>
-                        €10
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        14:30
-                    </td>
-                    <td>
-                        10:00 - 11:45
+                    <td rowspan="3">
+                        11:00
                     </td>
                     <td>
                         Yu-Gi-Oh
                     </td>
                     <td>
-                        Constructed Tournament
+                        Edison
+                    </td>
+                    <td>
+                        €5
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Magic: The Gathering
+                    </td>
+                    <td>
+                        Unfinity
                     </td>
                     <td>
                         €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Pokemon
+                    </td>
+                    <td>
+                        Win a box
+                    </td>
+                    <td>
+                        €20
+                    </td>
+                </tr>
+                <tr>
+                    <td rowspan="2">
+                        14:00
+                    </td>
+                    <td rowspan="2">
+                        11:00
+                    </td>
+                    <td>
+                        Magic: The Gathering
+                    </td>
+                    <td>
+                        Pauper
+                    </td>
+                    <td>
+                        €10
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Yu-Gi-Oh
+                    </td>
+                    <td>
+                        Locals
+                    </td>
+                    <td>
+                        €5
                     </td>
                 </tr>
             </tbody>
