--- a/schedule.html
+++ b/schedule.html
@@ -474,12 +474,12 @@ image: hero.jpg
             </tbody>
         </table>
 
-        <h2>Sunday, 28th January</h2>
+        <h2>Sunday</h2>
         <table>
             <tbody>
                 <tr>
                     <td>
-                        14:00
+                        10:00
                     </td>
                     <td>
                         <a href="/games/tales-toholon">Tales of Toholon: Standards and Practices</a>
