--- a/schedule.html
+++ b/schedule.html
@@ -488,4 +488,19 @@ image: hero.jpg
             </tbody>
         </table>
     </section>
+    <section class="schedule" id="stuff">
+        <h1>Events</h1>
+
+        <h2>Friday</h2>
+        <tbody>
+            <tr>
+                <td>
+                    18:00
+                </td>
+                <td>
+                    Dungeon Geomorph Workshop
+                </td>
+            </tr>
+        </tbody>
+    </section>
 </div>
