--- a/schedule.html
+++ b/schedule.html
@@ -492,15 +492,67 @@ image: hero.jpg
         <h1>Events</h1>
 
         <h2>Friday</h2>
-        <tbody>
-            <tr>
-                <td>
-                    18:00
-                </td>
-                <td>
-                    Dungeon Geomorph Workshop
-                </td>
-            </tr>
-        </tbody>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        18:00
+                    </td>
+                    <td>
+                        Dungeon Geomorph Workshop
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        21:00
+                    </td>
+                    <td>
+                        Quiz
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        
+        <h2>Saturday</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        11:00
+                    </td>
+                    <td>
+                        NRB Q&A Panel
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        15:00
+                    </td>
+                    <td>
+                        Hearthfire Tales Liveshow (with Special Guest Sullivan Beau Brown from NRB)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        21:00
+                    </td>
+                    <td>
+                        Charity Auction
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        
+        <h2>Sunday</h2>
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        11:00
+                    </td>
+                    <td>Knights of Munster</td>
+                </tr>
+            </tbody>
+        </table>
     </section>
 </div>
