--- a/schedule.html
+++ b/schedule.html
@@ -29,6 +29,7 @@ image: hero.jpg
                             <li><b>Alien - </b> <a href="/games/it-waits-in-the-dark">It waits in the dark</a></li>
                             <li><b>Sentiment - </b> <a href="/games/reflection-zero-to-hero">Reflection: Zero to Hero</a></li>
                             <li><b>Shires out - </b> <a href="/games/hair-hare-heir">Hair of the hare of the heir</a></li>
+                            <li><b>RuneQuest: Glorantha - </b> <a href="/games/cattle-raid">Cattle Raid!</a></li>
                         </ul>
                     </td>
                 </tr>
@@ -53,6 +54,9 @@ image: hero.jpg
                             <li>
                                 <b>Ryuutuma - </b> <a href="/games/letters-to-a-departed-dragon">Letters to a Departed Dragon</a>
                             </li>
+                            <li>
+                                <b>D&D 5e</b> <a href="/games/come-away-child">Come Away Oh Human Child</a>
+                            </li>
                         </ul>
                     </td>
                 </tr>
@@ -68,6 +72,12 @@ image: hero.jpg
                             </li>
                             <li>
                                 <b>Cyberpunk 2020 - </b><a href="/games/are-friends-electric">Are Friends Electric</a>
+                            </li>
+                            <li>
+                                <b>RuneQuest: Glorantha</b><a href="/games/a-rough-landing">A Rough Landing</a>
+                            </li>
+                            <li>
+                                <b>RuneQuest: Glorantha</b><a href="/games/the-rattling-wind">The Rattling Wind</a>
                             </li>
                         </ul>
                     </td>
