--- a/schedule.html
+++ b/schedule.html
@@ -55,7 +55,7 @@ image: hero.jpg
                                 <b>Ryuutuma - </b> <a href="/games/letters-to-a-departed-dragon">Letters to a Departed Dragon</a>
                             </li>
                             <li>
-                                <b>D&D 5e</b> <a href="/games/come-away-child">Come Away Oh Human Child</a>
+                                <b>D&D 5e - </b> <a href="/games/come-away-child">Come Away Oh Human Child</a>
                             </li>
                         </ul>
                     </td>
@@ -74,10 +74,10 @@ image: hero.jpg
                                 <b>Cyberpunk 2020 - </b><a href="/games/are-friends-electric">Are Friends Electric</a>
                             </li>
                             <li>
-                                <b>RuneQuest: Glorantha</b><a href="/games/a-rough-landing">A Rough Landing</a>
+                                <b>RuneQuest: Glorantha - </b><a href="/games/a-rough-landing">A Rough Landing</a>
                             </li>
                             <li>
-                                <b>RuneQuest: Glorantha</b><a href="/games/the-rattling-wind">The Rattling Wind</a>
+                                <b>RuneQuest: Glorantha - </b><a href="/games/the-rattling-wind">The Rattling Wind</a>
                             </li>
                         </ul>
                     </td>
